--- a/TikTok/opaque.html
+++ b/TikTok/opaque.html
@@ -1,1 +1,109 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>TikTok Feed - Opaque</title>
+  <link rel="stylesheet" href="../style.css">
+  <style>
+    .video-container {
+      margin: 20px 0;
+      text-align: center;
+    }
+    .video-container iframe {
+      width: 360px;
+      height: 640px;
+      border: none;
+    }
+    .engagement-buttons button {
+      margin: 5px;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <h1>TikTok Feed - Opaque</h1>
+  <div id="feed"></div>
+  <button id="exportData">Export Engagement Data</button>
+
+  <script>
+    // 12 school-appropriate, high school-friendly YouTube videos
+    const videos = [
+      {id: "K5S81ZHxG9k", title: "Funny TikTok Compilation 2024"},
+      {id: "3JZ_D3ELwOQ", title: "Cool Science Experiment Video"},
+      {id: "dQw4w9WgXcQ", title: "Motivational Short (High School Friendly)"},
+      {id: "L3wKzyIN1yk", title: "Educational Animation - Physics Explained"},
+      {id: "9bZkp7q19f0", title: "Viral Dance Trend Compilation"},
+      {id: "e-ORhEE9VVg", title: "Top 5 Study Tips for Students"},
+      {id: "Ukg_U3CnJWI", title: "Funny Animal Compilation"},
+      {id: "2Vv-BfVoq4g", title: "Music Cover Short"},
+      {id: "J---aiyznGQ", title: "Amazing Trick Shots"},
+      {id: "kJQP7kiw5Fk", title: "Creative DIY Life Hacks"},
+      {id: "hTWKbfoikeg", title: "Cool Science Demo"},
+      {id: "RgKAFK5djSk", title: "Motivational Story Short"}
+    ];
+
+    // Load previous engagement data or create a new object
+    let engagementData = JSON.parse(localStorage.getItem('tiktok_opaque_engagement')) || {};
+
+    const feed = document.getElementById('feed');
+
+    videos.forEach(video => {
+      const container = document.createElement('div');
+      container.className = 'video-container';
+
+      // Video embed
+      const iframe = document.createElement('iframe');
+      iframe.src = `https://www.youtube.com/embed/${video.id}?enablejsapi=1`;
+      iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
+      container.appendChild(iframe);
+
+      // Title
+      const title = document.createElement('p');
+      title.textContent = video.title;
+      container.appendChild(title);
+
+      // Engagement buttons
+      const buttons = document.createElement('div');
+      buttons.className = 'engagement-buttons';
+
+      const likeBtn = document.createElement('button');
+      likeBtn.textContent = 'Like';
+      likeBtn.onclick = () => {
+        engagementData[video.id] = engagementData[video.id] || {likes:0, skips:0, retention:0};
+        engagementData[video.id].likes++;
+        localStorage.setItem('tiktok_opaque_engagement', JSON.stringify(engagementData));
+        alert(`Liked! Total likes: ${engagementData[video.id].likes}`);
+      };
+
+      const skipBtn = document.createElement('button');
+      skipBtn.textContent = 'Skip';
+      skipBtn.onclick = () => {
+        engagementData[video.id] = engagementData[video.id] || {likes:0, skips:0, retention:0};
+        engagementData[video.id].skips++;
+        localStorage.setItem('tiktok_opaque_engagement', JSON.stringify(engagementData));
+        alert(`Skipped! Total skips: ${engagementData[video.id].skips}`);
+      };
+
+      buttons.appendChild(likeBtn);
+      buttons.appendChild(skipBtn);
+      container.appendChild(buttons);
+
+      feed.appendChild(container);
+    });
+
+    // Export data
+    document.getElementById('exportData').onclick = () => {
+      const dataStr = JSON.stringify(engagementData, null, 2);
+      const blob = new Blob([dataStr], {type: "application/json"});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = "tiktok_opaque_engagement.json";
+      a.click();
+      URL.revokeObjectURL(url);
+    };
+  </script>
+</body>
+</html>
 
