--- a/TikTok/partial.html
+++ b/TikTok/partial.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>TikTok Feed - Partial Transparency</title>
-  <link rel="stylesheet" href="../style.css">
+   <link rel="stylesheet" href="TikTok/style.css">
   <style>
     .video-container {
       margin: 20px 0;
