--- a/TikTok/partial.html
+++ b/TikTok/partial.html
@@ -3,23 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>TikTok Feed - Partial Transparency</title>
-   <link rel="stylesheet" href="TikTok/style.css">
-  <style>
-    .video-container {
-      margin: 20px 0;
-      text-align: center;
-    }
-    .video-container iframe {
-      width: 360px;
-      height: 640px;
-      border: none;
-    }
-    .engagement-buttons button {
-      margin: 5px;
-      padding: 5px 10px;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
   <h1>TikTok Feed - Partial Transparency</h1>
@@ -27,9 +11,9 @@
   <button id="exportData">Export Engagement Data</button>
 
   <script>
-    // 12 school-appropriate YouTube videos for high school juniors
+    // 12 school-appropriate TikTok-style videos
     const videos = [
-      {id: "VbfpW0pbvaU", title: "Top TikTok Dance Compilation"},
+      {id: "VbfpW0pbvaU", title: "Top TikTok Dance Clips"},
       {id: "fLexgOxsZu0", title: "Funny Animal Short"},
       {id: "60ItHLz5WEA", title: "Motivational Speech"},
       {id: "3JZ_D3ELwOQ", title: "Cool Science Experiment"},
@@ -38,7 +22,7 @@
       {id: "Ukg_U3CnJWI", title: "Music Cover Short"},
       {id: "hTWKbfoikeg", title: "Amazing Trick Shots"},
       {id: "2Vv-BfVoq4g", title: "Popular Dance Clip"},
-      {id: "OPf0YbXqDm0", title: "Fun TikTok Compilation"},
+      {id: "OPf0YbXqDm0", title: "Fun Compilation"},
       {id: "M7lc1UVf-VE", title: "Educational Demo Video"},
       {id: "E07s5ZYygMg", title: "Science Explainer Short"}
     ];
