--- a/tiktok/opaque.html
+++ b/tiktok/opaque.html
@@ -1,93 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TikTok Feed - Opaque</title>
-  <link rel="stylesheet" href="../css/tiktok.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TikTok Opaque Feed</title>
+    <link rel="stylesheet" href="../css/TikTok.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>TikTok Feed - Opaque</h1>
-  <div id="feed"></div>
-  <button id="exportData">Export Engagement Data</button>
 
-  <script>
-    // 12 school-appropriate TikTok-style videos
-    const videos = [
-      {id: "VbfpW0pbvaU", title: "Top TikTok Dance Clips"},
-      {id: "fLexgOxsZu0", title: "Funny Animal Short"},
-      {id: "60ItHLz5WEA", title: "Motivational Speech"},
-      {id: "3JZ_D3ELwOQ", title: "Cool Science Experiment"},
-      {id: "kJQP7kiw5Fk", title: "DIY Life Hacks"},
-      {id: "RgKAFK5djSk", title: "Positive Study Tips"},
-      {id: "Ukg_U3CnJWI", title: "Music Cover Short"},
-      {id: "hTWKbfoikeg", title: "Amazing Trick Shots"},
-      {id: "2Vv-BfVoq4g", title: "Popular Dance Clip"},
-      {id: "OPf0YbXqDm0", title: "Fun Compilation"},
-      {id: "M7lc1UVf-VE", title: "Educational Demo Video"},
-      {id: "E07s5ZYygMg", title: "Science Explainer Short"}
-    ];
+<header>
+    <div class="logo">
+        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/69/TikTok_logo.svg/1200px-TikTok_logo.svg.png" alt="TikTok Logo">
+        <h1>TikTok</h1>
+    </div>
 
-    // Load previous engagement data or create a new object
-    let engagementData = JSON.parse(localStorage.getItem('tiktok_opaque_engagement')) || {};
+    <div class="search-container">
+        <input type="text" class="search-box" placeholder="Search">
+        <i class="fas fa-search search-icon"></i>
+    </div>
 
-    const feed = document.getElementById('feed');
+    <div class="nav-actions">
+        <button class="upload-btn"><i class="fas fa-upload"></i> Upload</button>
+        <button class="login-btn">Log in</button>
+    </div>
+</header>
 
-    videos.forEach(video => {
-      const container = document.createElement('div');
-      container.className = 'video-container';
+<div class="main-container">
 
-      // Video embed
-      const iframe = document.createElement('iframe');
-      iframe.src = `https://www.youtube.com/embed/${video.id}?enablejsapi=1`;
-      iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
-      container.appendChild(iframe);
+    <aside class="sidebar">
+        <!-- Sidebar same as previous HTML -->
+    </aside>
 
-      // Title
-      const title = document.createElement('p');
-      title.textContent = video.title;
-      container.appendChild(title);
+    <main class="content-feed">
+        <div class="feed-tabs">
+            <div class="feed-tab active">For You</div>
+            <div class="feed-tab">Following</div>
+        </div>
 
-      // Engagement buttons
-      const buttons = document.createElement('div');
-      buttons.className = 'engagement-buttons';
+        <div class="video-grid" id="video-grid">
+            <!-- Placeholder for videos; add your username and video link later -->
+            <!-- Example Video Card -->
+            <div class="video-card" data-username="username1" data-video-link="LINK_HERE">
+                <div class="video-thumbnail">
+                    <video class="thumbnail-video" width="100%" muted preload="metadata">
+                        <source src="" type="video/mp4">
+                        Your browser does not support HTML video.
+                    </video>
+                    <div class="video-duration">0:15</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">
+                        <img src="https://i.pravatar.cc/24" alt="Avatar" class="creator-avatar">
+                        <span class="creator-name">@username1</span>
+                    </div>
+                    <div class="video-title">Video Title Here</div>
+                    <div class="video-stats">
+                        <div class="stat-item like-btn"><i class="fas fa-heart"></i> <span class="like-count">0</span></div>
+                        <div class="stat-item favorite-btn"><i class="fas fa-star"></i> <span class="favorite-count">0</span></div>
+                        <div class="stat-item skip-btn"><i class="fas fa-forward"></i></div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-      const likeBtn = document.createElement('button');
-      likeBtn.textContent = 'Like';
-      likeBtn.onclick = () => {
-        engagementData[video.id] = engagementData[video.id] || {likes:0, skips:0, retention:0};
-        engagementData[video.id].likes++;
-        localStorage.setItem('tiktok_opaque_engagement', JSON.stringify(engagementData));
-        alert(`Liked! Total likes: ${engagementData[video.id].likes}`);
-      };
+    </main>
 
-      const skipBtn = document.createElement('button');
-      skipBtn.textContent = 'Skip';
-      skipBtn.onclick = () => {
-        engagementData[video.id] = engagementData[video.id] || {likes:0, skips:0, retention:0};
-        engagementData[video.id].skips++;
-        localStorage.setItem('tiktok_opaque_engagement', JSON.stringify(engagementData));
-        alert(`Skipped! Total skips: ${engagementData[video.id].skips}`);
-      };
+</div>
 
-      buttons.appendChild(likeBtn);
-      buttons.appendChild(skipBtn);
-      container.appendChild(buttons);
+<script>
+    // Engagement logging
+    const engagementData = {};
 
-      feed.appendChild(container);
+    document.querySelectorAll('.video-card').forEach((card, index) => {
+        const username = card.dataset.username;
+        const videoLink = card.dataset.videoLink;
+        const video = card.querySelector('.thumbnail-video');
+        const likeBtn = card.querySelector('.like-btn');
+        const favoriteBtn = card.querySelector('.favorite-btn');
+        const skipBtn = card.querySelector('.skip-btn');
+
+        engagementData[username] = {
+            videoLink: videoLink,
+            likes: 0,
+            favorites: 0,
+            watchTime: 0,
+            skips: 0
+        };
+
+        // Track play time
+        video.addEventListener('timeupdate', () => {
+            engagementData[username].watchTime = video.currentTime;
+        });
+
+        // Like button
+        likeBtn.addEventListener('click', () => {
+            engagementData[username].likes++;
+            likeBtn.querySelector('span').textContent = engagementData[username].likes;
+        });
+
+        // Favorite button
+        favoriteBtn.addEventListener('click', () => {
+            engagementData[username].favorites++;
+            favoriteBtn.querySelector('span').textContent = engagementData[username].favorites;
+        });
+
+        // Skip button
+        skipBtn.addEventListener('click', () => {
+            engagementData[username].skips++;
+            // Move to next video in the grid
+            const nextVideo = card.nextElementSibling;
+            if (nextVideo) nextVideo.scrollIntoView({behavior: "smooth"});
+        });
     });
 
-    // Export data button
-    document.getElementById('exportData').onclick = () => {
-      const dataStr = JSON.stringify(engagementData, null, 2);
-      const blob = new Blob([dataStr], {type: "application/json"});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = "tiktok_opaque_engagement.json";
-      a.click();
-      URL.revokeObjectURL(url);
-    };
-  </script>
+    // Optional: function to export data (console log for now)
+    function exportEngagement() {
+        console.log(JSON.stringify(engagementData, null, 2));
+    }
+
+    // Example: call exportEngagement when user leaves page
+    window.addEventListener('beforeunload', exportEngagement);
+</script>
+
 </body>
 </html>
 
