--- a/tiktok/partial.html
+++ b/tiktok/partial.html
@@ -1,93 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TikTok Feed - Partial Transparency</title>
-  <link rel="stylesheet" href="../css/tiktok.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Video Feed - Partial Transparency</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>TikTok Feed - Partial Transparency</h1>
-  <div id="feed"></div>
-  <button id="exportData">Export Engagement Data</button>
+    <header>
+        <div class="logo">
+            <h1>VideoVibe</h1>
+        </div>
+        <div class="nav-actions">
+            <button class="login-btn">Log In</button>
+        </div>
+    </header>
 
-  <script>
-    // 12 school-appropriate TikTok-style videos
-    const videos = [
-      {id: "VbfpW0pbvaU", title: "Top TikTok Dance Clips"},
-      {id: "fLexgOxsZu0", title: "Funny Animal Short"},
-      {id: "60ItHLz5WEA", title: "Motivational Speech"},
-      {id: "3JZ_D3ELwOQ", title: "Cool Science Experiment"},
-      {id: "kJQP7kiw5Fk", title: "DIY Life Hacks"},
-      {id: "RgKAFK5djSk", title: "Positive Study Tips"},
-      {id: "Ukg_U3CnJWI", title: "Music Cover Short"},
-      {id: "hTWKbfoikeg", title: "Amazing Trick Shots"},
-      {id: "2Vv-BfVoq4g", title: "Popular Dance Clip"},
-      {id: "OPf0YbXqDm0", title: "Fun Compilation"},
-      {id: "M7lc1UVf-VE", title: "Educational Demo Video"},
-      {id: "E07s5ZYygMg", title: "Science Explainer Short"}
-    ];
+    <main class="content-feed dark-background">
+        <div class="video-grid">
 
-    // Load previous engagement data or create a new object
-    let engagementData = JSON.parse(localStorage.getItem('tiktok_partial_engagement')) || {};
+            <!-- Video placeholders 1-12 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder1.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:30</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_1</div>
+                    <h3 class="video-title">Video Title 1</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.2K</div>
+                        <div class="stat-item">💬 150</div>
+                        <div class="stat-item">🔗 40</div>
+                    </div>
+                    <div class="algorithm-info">Recommended because you watched similar content recently.</div>
+                </div>
+            </div>
 
-    const feed = document.getElementById('feed');
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder2.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:45</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_2</div>
+                    <h3 class="video-title">Video Title 2</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 900</div>
+                        <div class="stat-item">💬 120</div>
+                        <div class="stat-item">🔗 35</div>
+                    </div>
+                    <div class="algorithm-info">Suggested because you engaged with similar hashtags.</div>
+                </div>
+            </div>
 
-    videos.forEach(video => {
-      const container = document.createElement('div');
-      container.className = 'video-container';
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder3.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:50</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_3</div>
+                    <h3 class="video-title">Video Title 3</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.5K</div>
+                        <div class="stat-item">💬 200</div>
+                        <div class="stat-item">🔗 60</div>
+                    </div>
+                    <div class="algorithm-info">Recommended because of trending content in your region.</div>
+                </div>
+            </div>
 
-      // Video embed
-      const iframe = document.createElement('iframe');
-      iframe.src = `https://www.youtube.com/embed/${video.id}?enablejsapi=1`;
-      iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
-      container.appendChild(iframe);
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder4.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:40</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_4</div>
+                    <h3 class="video-title">Video Title 4</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 800</div>
+                        <div class="stat-item">💬 95</div>
+                        <div class="stat-item">🔗 30</div>
+                    </div>
+                    <div class="algorithm-info">Recommended due to your engagement with similar creators.</div>
+                </div>
+            </div>
 
-      // Title
-      const title = document.createElement('p');
-      title.textContent = video.title;
-      container.appendChild(title);
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder5.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:55</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_5</div>
+                    <h3 class="video-title">Video Title 5</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.1K</div>
+                        <div class="stat-item">💬 110</div>
+                        <div class="stat-item">🔗 45</div>
+                    </div>
+                    <div class="algorithm-info">Suggested because you interacted with similar video categories.</div>
+                </div>
+            </div>
 
-      // Engagement buttons
-      const buttons = document.createElement('div');
-      buttons.className = 'engagement-buttons';
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder6.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:35</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_6</div>
+                    <h3 class="video-title">Video Title 6</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 950</div>
+                        <div class="stat-item">💬 90</div>
+                        <div class="stat-item">🔗 25</div>
+                    </div>
+                    <div class="algorithm-info">Recommended based on your past watch time trends.</div>
+                </div>
+            </div>
 
-      const likeBtn = document.createElement('button');
-      likeBtn.textContent = 'Like';
-      likeBtn.onclick = () => {
-        engagementData[video.id] = engagementData[video.id] || {likes:0, skips:0, retention:0};
-        engagementData[video.id].likes++;
-        localStorage.setItem('tiktok_partial_engagement', JSON.stringify(engagementData));
-        alert(`Liked! Total likes: ${engagementData[video.id].likes}`);
-      };
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder7.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:42</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_7</div>
+                    <h3 class="video-title">Video Title 7</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.3K</div>
+                        <div class="stat-item">💬 130</div>
+                        <div class="stat-item">🔗 50</div>
+                    </div>
+                    <div class="algorithm-info">Suggested because you watched similar trends this week.</div>
+                </div>
+            </div>
 
-      const skipBtn = document.createElement('button');
-      skipBtn.textContent = 'Skip';
-      skipBtn.onclick = () => {
-        engagementData[video.id] = engagementData[video.id] || {likes:0, skips:0, retention:0};
-        engagementData[video.id].skips++;
-        localStorage.setItem('tiktok_partial_engagement', JSON.stringify(engagementData));
-        alert(`Skipped! Total skips: ${engagementData[video.id].skips}`);
-      };
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder8.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:48</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_8</div>
+                    <h3 class="video-title">Video Title 8</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.0K</div>
+                        <div class="stat-item">💬 100</div>
+                        <div class="stat-item">🔗 40</div>
+                    </div>
+                    <div class="algorithm-info">Recommended due to your engagement with similar hashtags.</div>
+                </div>
+            </div>
 
-      buttons.appendChild(likeBtn);
-      buttons.appendChild(skipBtn);
-      container.appendChild(buttons);
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder9.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:36</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_9</div>
+                    <h3 class="video-title">Video Title 9</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 870</div>
+                        <div class="stat-item">💬 80</div>
+                        <div class="stat-item">🔗 20</div>
+                    </div>
+                    <div class="algorithm-info">Suggested because of your interaction with similar content types.</div>
+                </div>
+            </div>
 
-      feed.appendChild(container);
-    });
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder10.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:50</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_10</div>
+                    <h3 class="video-title">Video Title 10</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.1K</div>
+                        <div class="stat-item">💬 120</div>
+                        <div class="stat-item">🔗 35</div>
+                    </div>
+                    <div class="algorithm-info">Recommended based on trending content in your region.</div>
+                </div>
+            </div>
 
-    // Export data button
-    document.getElementById('exportData').onclick = () => {
-      const dataStr = JSON.stringify(engagementData, null, 2);
-      const blob = new Blob([dataStr], {type: "application/json"});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = "tiktok_partial_engagement.json";
-      a.click();
-      URL.revokeObjectURL(url);
-    };
-  </script>
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder11.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:44</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_11</div>
+                    <h3 class="video-title">Video Title 11</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.0K</div>
+                        <div class="stat-item">💬 90</div>
+                        <div class="stat-item">🔗 30</div>
+                    </div>
+                    <div class="algorithm-info">Suggested because you frequently watch similar creators.</div>
+                </div>
+            </div>
+
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="placeholder12.jpg" alt="Video Thumbnail" class="thumbnail-img">
+                    <div class="video-duration">0:38</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_12</div>
+                    <h3 class="video-title">Video Title 12</h3>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 980</div>
+                        <div class="stat-item">💬 85</div>
+                        <div class="stat-item">🔗 25</div>
+                    </div>
+                    <div class="algorithm-info">Recommended because you recently liked similar content.</div>
+                </div>
+            </div>
+
+        </div>
+    </main>
 </body>
 </html>
-
