--- a/tiktok/opaque.html
+++ b/tiktok/opaque.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Video Feed</title>
+  <link rel="stylesheet" href="../css/tiktok.css">
+</head>
+<body>
+  <div class="video-container">
+    <video controls></video>
+
+    <!-- Side icons -->
+    <div class="side-icons">
+      <div id="like">❤</div>
+      <div id="favorite">⭐</div>
+    </div>
+
+    <!-- Video info -->
+    <div class="video-info">
+      <div class="username">@username</div>
+      <div class="caption">This is the caption</div>
+      <div class="music">🎵 Music name</div>
+    </div>
+  </div>
+
+  <script src="../js/tiktokAlgorithm.js"></script>
+</body>
+</html>
