--- a/tiktok/opaque.html
+++ b/tiktok/opaque.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,20 +7,47 @@
   <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
+  <h1>Video Feed</h1>
+
+  <!-- Video 1 -->
   <div class="video-container">
     <video controls></video>
-
-    <!-- Side icons -->
     <div class="side-icons">
-      <div id="like">❤</div>
-      <div id="favorite">⭐</div>
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
     </div>
-
-    <!-- Video info -->
     <div class="video-info">
-      <div class="username">@username</div>
-      <div class="caption">This is the caption</div>
-      <div class="music">🎵 Music name</div>
+      <div class="username">@user1</div>
+      <div class="caption">Caption 1</div>
+      <div class="music">🎵 Music 1</div>
+    </div>
+  </div>
+
+  <!-- Video 2 -->
+  <div class="video-container">
+    <video controls></video>
+    <div class="side-icons">
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
+    </div>
+    <div class="video-info">
+      <div class="username">@user2</div>
+      <div class="caption">Caption 2</div>
+      <div class="music">🎵 Music 2</div>
+    </div>
+  </div>
+
+  <!-- Video 3 -->
+  <div class="video-container">
+    <video controls></video>
+    <div class="side-icons">
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
+    </div>
+    <div class="video-info">
+      <div class="username">@user3</div>
+      <div class="caption">Caption 3</div>
+      <div class="music">🎵 Music 3</div>
     </div>
   </div>
 
