--- a/tiktok/partial.html
+++ b/tiktok/partial.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Partial Transparency Feed</title>
+  <link rel="stylesheet" href="../css/tiktok.css">
+  <style>
+    /* Overlay for partial transparency info */
+    .recommendation-overlay {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background-color: rgba(0,0,0,0.6);
+      color: #fff;
+      padding: 8px 12px;
+      border-radius: 6px;
+      font-size: 14px;
+      max-width: 80%;
+      z-index: 10;
+    }
+  </style>
+</head>
+<body>
+  <h1>Video Feed (Partial Transparency)</h1>
+
+  <div class="video-container">
+    <div class="recommendation-overlay" id="overlay1"></div>
+    <video controls></video>
+    <div class="side-icons">
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
+    </div>
+    <div class="video-info">
+      <div class="username">@user1</div>
+      <div class="caption">Caption 1</div>
+      <div class="music">🎵 Music 1</div>
+    </div>
+  </div>
+
+  <div class="video-container">
+    <div class="recommendation-overlay" id="overlay2"></div>
+    <video controls></video>
+    <div class="side-icons">
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
+    </div>
+    <div class="video-info">
+      <div class="username">@user2</div>
+      <div class="caption">Caption 2</div>
+      <div class="music">🎵 Music 2</div>
+    </div>
+  </div>
+
+  <div class="video-container">
+    <div class="recommendation-overlay" id="overlay3"></div>
+    <video controls></video>
+    <div class="side-icons">
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
+    </div>
+    <div class="video-info">
+      <div class="username">@user3</div>
+      <div class="caption">Caption 3</div>
+      <div class="music">🎵 Music 3</div>
+    </div>
+  </div>
+
+  <script src="../js/tiktokPartial.js"></script>
+</body>
+</html>
 
