--- a/tiktok/full.html
+++ b/tiktok/full.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Full Transparency Feed</title>
+  <link rel="stylesheet" href="../css/tiktok.css">
+  <style>
+    .recommendation-overlay {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background-color: rgba(0,0,0,0.7);
+      color: #fff;
+      padding: 8px 12px;
+      border-radius: 6px;
+      font-size: 14px;
+      max-width: 80%;
+      z-index: 10;
+      white-space: pre-line; /* Preserve line breaks */
+    }
+  </style>
+</head>
+<body>
+  <h1>Video Feed (Full Transparency)</h1>
+
+  <!-- Video Containers -->
+  <div class="video-container">
+    <div class="recommendation-overlay" id="overlay1"></div>
+    <video controls></video>
+    <div class="side-icons">
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
+    </div>
+    <div class="video-info">
+      <div class="username">@user1</div>
+      <div class="caption">Caption 1</div>
+      <div class="music">🎵 Music 1</div>
+    </div>
+  </div>
+
+  <div class="video-container">
+    <div class="recommendation-overlay" id="overlay2"></div>
+    <video controls></video>
+    <div class="side-icons">
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
+    </div>
+    <div class="video-info">
+      <div class="username">@user2</div>
+      <div class="caption">Caption 2</div>
+      <div class="music">🎵 Music 2</div>
+    </div>
+  </div>
+
+  <div class="video-container">
+    <div class="recommendation-overlay" id="overlay3"></div>
+    <video controls></video>
+    <div class="side-icons">
+      <div class="like">❤</div>
+      <div class="favorite">⭐</div>
+    </div>
+    <div class="video-info">
+      <div class="username">@user3</div>
+      <div class="caption">Caption 3</div>
+      <div class="music">🎵 Music 3</div>
+    </div>
+  </div>
+
+  <script src="../js/tiktokFull.js"></script>
+</body>
+</html>
 
