--- a/tiktok/opaque.html
+++ b/tiktok/opaque.html
@@ -3,18 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Feed</title>
+  <title>Opaque Video Feed</title>
   <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
-  <h1>Video Feed</h1>
+  <h1>Video Feed (Opaque)</h1>
 
-  <!-- Video 1 -->
   <div class="video-container">
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user1</div>
@@ -23,12 +22,11 @@
     </div>
   </div>
 
-  <!-- Video 2 -->
   <div class="video-container">
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user2</div>
@@ -37,12 +35,11 @@
     </div>
   </div>
 
-  <!-- Video 3 -->
   <div class="video-container">
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user3</div>
