--- a/tiktok/partial.html
+++ b/tiktok/partial.html
@@ -25,11 +25,11 @@
   <h1>Video Feed (Partial Transparency)</h1>
 
   <div class="video-container">
-    <div class="recommendation-overlay" id="overlay1"></div>
+    <div class="recommendation-overlay"></div>
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user1</div>
@@ -39,11 +39,11 @@
   </div>
 
   <div class="video-container">
-    <div class="recommendation-overlay" id="overlay2"></div>
+    <div class="recommendation-overlay"></div>
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user2</div>
@@ -53,11 +53,11 @@
   </div>
 
   <div class="video-container">
-    <div class="recommendation-overlay" id="overlay3"></div>
+    <div class="recommendation-overlay"></div>
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user3</div>
@@ -69,4 +69,3 @@
   <script src="../js/tiktokPartial.js"></script>
 </body>
 </html>
-
