--- a/tiktok/full.html
+++ b/tiktok/full.html
@@ -24,13 +24,12 @@
 <body>
   <h1>Video Feed (Full Transparency)</h1>
 
-  <!-- Video Containers -->
   <div class="video-container">
-    <div class="recommendation-overlay" id="overlay1"></div>
+    <div class="recommendation-overlay"></div>
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user1</div>
@@ -40,11 +39,11 @@
   </div>
 
   <div class="video-container">
-    <div class="recommendation-overlay" id="overlay2"></div>
+    <div class="recommendation-overlay"></div>
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user2</div>
@@ -54,11 +53,11 @@
   </div>
 
   <div class="video-container">
-    <div class="recommendation-overlay" id="overlay3"></div>
+    <div class="recommendation-overlay"></div>
     <video controls></video>
     <div class="side-icons">
       <div class="like">❤</div>
-      <div class="favorite">⭐</div>
+      <div class="favorite">🔖</div>
     </div>
     <div class="video-info">
       <div class="username">@user3</div>
@@ -70,4 +69,3 @@
   <script src="../js/tiktokFull.js"></script>
 </body>
 </html>
-
