--- a/tiktok/opaque.html
+++ b/tiktok/opaque.html
@@ -7,15 +7,11 @@
   <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
-  <div class="video-container">
-    <video id="mainVideo" autoplay muted></video>
-    <div id="controls">
-      <button id="likeBtn">❤️</button>
-      <button id="bookmarkBtn">🔖</button>
-    </div>
-    <div id="overlay"></div>
-  </div>
 
-  <script src="../js/tiktokAlgorithm.js"></script>
+<div class="app-container">
+  <div id="feedContainer" class="feed"></div>
+</div>
+
+<script src="../js/tiktokAlgorithm.js"></script>
 </body>
 </html>
