--- a/tiktok/full.html
+++ b/tiktok/full.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Full Transparency</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TikTok Full Feed</title>
   <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
-  <div class="app-container">
-    <div id="feedContainer" class="feed"></div>
-  </div>
+  <div class="feed-container" id="feed"></div>
 
-  <script src="../js/tiktokFull.js"></script>
+  <script src="../js/tiktokAlgorithm.js"></script>
+  <script>
+    generateFeed("full"); // Full algorithm
+  </script>
 </body>
 </html>
