--- a/tiktok/partial.html
+++ b/tiktok/partial.html
@@ -11,7 +11,7 @@
 
   <script src="../js/tiktokAlgorithm.js"></script>
   <script>
-    generateFeed("partial"); // Partial algorithm
+    generateFeed("partial");
   </script>
 </body>
 </html>
