--- a/tiktok/full.html
+++ b/tiktok/full.html
@@ -11,7 +11,7 @@
 
   <script src="../js/tiktokAlgorithm.js"></script>
   <script>
-    generateFeed("full"); // Full algorithm
+    generateFeed("full");
   </script>
 </body>
 </html>
