--- a/tiktok/opaque.html
+++ b/tiktok/opaque.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TikTok Opaque Feed</title>
+  <title>Opaque Feed</title>
   <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
-  <div class="feed-container" id="feed"></div>
-
-  <script src="../js/tiktokAlgorithm.js"></script>
-  <script>
-    generateFeed("opaque");
-  </script>
+  <div id="feed"></div>
+  <script src="js/tiktokAlgorithm(opaque).js"></script>
 </body>
 </html>
