--- a/tiktok/partial.html
+++ b/tiktok/partial.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TikTok Partial Feed</title>
+  <title>Partial Feed</title>
   <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
-  <div class="feed-container" id="feed"></div>
-
-  <script src="../js/tiktokAlgorithm.js"></script>
-  <script>
-    generateFeed("partial");
-  </script>
+  <div id="feed"></div>
+  <script src="js/tiktokPartial.js"></script>
 </body>
 </html>
