Update script source for tiktokAlgorithm

--- a/tiktok/opaque.html
+++ b/tiktok/opaque.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <div id="feed"></div>
-  <script src="js/tiktokAlgorithm(opaque).js"></script>
+  <script src="js/tiktokAlgorithm.js"></script>
 </body>
 </html>
