Rename title and update stylesheet/script paths

--- a/tiktok/opaque.html
+++ b/tiktok/opaque.html
@@ -3,12 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Video Feed</title>
-<link rel="stylesheet" href="tiktok.css">
+<title>Opaque Feed</title>
+<link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
   <div id="feed"></div>
-
-  <script src="js/tiktokAlgorithm.js"></script>
+  <script src="../js/tiktokAlgorithm.js"></script>
 </body>
 </html>
