--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
   <h1>Simulated Social Media Feeds Dashboard</h1>
 
   <div class="platform">
-    <h2>TikTok Feeds</h2>
+    <h2>Simulated Feed #1</h2>
     <a href="tiktok/opaque.html" target="_blank">Opaque</a>
     <a href="tiktok/partial.html" target="_blank">Partial Transparency</a>
     <a href="tiktok/full.html" target="_blank">Full Transparency</a>
   </div>
 
   <div class="platform">
-    <h2>Instagram Feeds</h2>
+    <h2>Simulated Feed #2</h2>
     <a href="instagram/opaque.html" target="_blank">Opaque</a>
     <a href="instagram/partial.html" target="_blank">Partial Transparency</a>
     <a href="instagram/full.html" target="_blank">Full Transparency</a>
   </div>
 
   <div class="platform">
-    <h2>YouTube Feeds</h2>
+    <h2>Simulated Feed #3</h2>
     <a href="youtube/opaque.html" target="_blank">Opaque</a>
     <a href="youtube/partial.html" target="_blank">Partial Transparency</a>
     <a href="youtube/full.html" target="_blank">Full Transparency</a>
